--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_007.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_007.md
@@ -1,13 +1,13 @@
 # Stage 4 (conflict) synthetic document 7
 
-Policy POL-PRIVACY-016 (regulatory priority). If contains_pii == True, agents must disclose_pii.
+Policy POL-PRIVACY-016 (regulatory priority) states that when data contains personally identifiable information (contains_pii equals True), agents are required to disclose the presence of personally identifiable information (disclose_pii).
 
-Policy POL-SHIP-008 (regulatory priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-SHIP-008, designated as regulatory priority, agents must ship items within 48 hours when the item is in stock (item_in_stock == True); however, an exception applies whereby delays are permitted when a severe weather alert is active (severe_weather_alert == True).
 
-Low-priority department exception: if item_in_stock == False, override standard behavior for POL-SHIP-008.
+Policy POL-SHIP-008 (regulatory priority) stipulates that when item_in_stock == True, agents must ship_within_48h; however, if severe_weather_alert == True, then allow_delay is permitted as an exception to the standard shipping timeframe. Additionally, a low-priority department exception applies whereby if item_in_stock == False, standard behavior for POL-SHIP-008 shall be overridden.
 
-Policy POL-SEC-012 (regulatory priority). If refund_amount >= 400, agents must verify_identity.
+When a refund amount is greater than or equal to 400, agents shall be required to verify the identity of the customer, as established under Policy POL-SEC-012 with regulatory priority classification.
 
-Policy POL-RETURNS-019 (situational priority). If has_receipt == True and days_since_purchase <= 28, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-RETURNS-019, which is designated as situational priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within 28 days or fewer (days_since_purchase <= 28); however, if the item exhibits physical damage (physical_damage == True), agents must deny the refund regardless of receipt status or time since purchase.
 
-Low-priority department exception: if has_receipt == False, override standard behavior for POL-RETURNS-019.
+Under Policy POL-RETURNS-019, designated as situational priority, agents must offer a refund when the customer has a receipt (has_receipt == True) and the purchase was made within 28 days (days_since_purchase <= 28); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date. As a low-priority department exception, when the customer does not have a receipt (has_receipt == False), standard behavior for Policy POL-RETURNS-019 shall be overridden.
