Synthetic data all generated

--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_014.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_014.md
@@ -1,9 +1,9 @@
-# Stage 4 (explicit) synthetic document 14
+# Stage 4 (implicit) synthetic document 14
 
-Policy POL-SHIP-018 (department priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+When customers have come to us with returns over the years, we've typically found that things go smoothest when they bring their receipt along. Usually, if someone's making a return within about a week of buying something, and they've got that proof of purchase handy, the conversation naturally tends to wrap up with us processing a refund for them. Of course, every now and then there are situations that call for a different approach, but that's generally been how these interactions have played out.
 
-Policy POL-SHIP-013 (company priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+When handling privacy matters, teams have typically found that once they've confirmed personal information is present in the data, the natural next step has usually been to proceed with disclosure. This has generally been the way things flow in most standard situations, though of course there are always those occasional exceptions that might call for a different approach.
 
-Policy POL-SEC-012 (regulatory priority). If refund_amount >= 400, agents must verify_identity.
+When handling shipping requests, the process has typically followed a familiar pattern over the years. Teams usually verify that the item shows as available in inventory first, and once that's confirmed, things have generally wrapped up with getting the order shipped out within a 48-hour window. That's just how it's tended to flow in most standard situations.
 
-Policy POL-RETURNS-009 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+When it comes to getting orders out the door, the team typically takes a look at what's actually available in the warehouse first. If everything checks out and the item is on hand, things usually move pretty quickly from there – most packages tend to head out within a couple of days.
