--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_020.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_020.md
@@ -1,15 +1,15 @@
 # Stage 4 (conflict) synthetic document 20
 
-Policy POL-PRIVACY-011 (situational priority). If contains_pii == True, agents must disclose_pii.
+Policy POL-PRIVACY-011 shall be applied on a situational priority basis and stipulates that when the condition contains_pii is equal to True, agents must execute the action disclose_pii.
 
-Low-priority department exception: if contains_pii == False, override standard behavior for POL-PRIVACY-011.
+Policy POL-PRIVACY-011 (situational priority) shall govern the handling of personally identifiable information as follows: When contains_pii equals True, agents must execute disclose_pii; however, a low-priority department exception applies whereby when contains_pii equals False, standard behavior for POL-PRIVACY-011 shall be overridden.
 
-Policy POL-PRIVACY-001 (company priority). If contains_pii == True, agents must disclose_pii.
+Under Policy POL-PRIVACY-001, designated as company priority, when any data or information contains personally identifiable information (contains_pii equals True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii).
 
-Low-priority department exception: if contains_pii == False, override standard behavior for POL-PRIVACY-001.
+Policy POL-PRIVACY-001 (company priority) shall govern the handling of personally identifiable information as follows: When contains_pii equals True, agents must execute disclose_pii; however, a low-priority department exception applies whereby when contains_pii equals False, standard behavior for POL-PRIVACY-001 shall be overridden.
 
-Policy POL-REFUND-020 (regulatory priority). If has_receipt == True and days_since_purchase <= 7, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-020, designated as regulatory priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within seven days or fewer (days_since_purchase <= 7); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase timeframe.
 
-Policy POL-RETURNS-009 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-RETURNS-009 (company priority), agents must offer a refund to customers when has_receipt == True and days_since_purchase <= 14; however, if physical_damage == True, agents must deny the refund regardless of receipt status or days since purchase.
 
-Low-priority department exception: if has_receipt == False, override standard behavior for POL-RETURNS-009.
+Under Policy POL-RETURNS-009, agents must offer a refund when the customer has a receipt (has_receipt == True) and the purchase was made within 14 days (days_since_purchase <= 14); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date. As a low-priority department exception, when the customer does not have a receipt (has_receipt == False), the standard behavior of this policy shall be overridden.
