--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_001.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_001.md
@@ -1,3 +1,9 @@
 # Stage 4 (hybrid) synthetic document 1
 
-Under Policy POL-PRIVACY-001, designated as company priority, when any data or information contains personally identifiable information (contains_pii equals True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii).
+Under Policy POL-REFUND-005 (company priority), agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within 14 days (days_since_purchase <= 14); however, if the item shows physical damage (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
+
+Under Policy POL-REFUND-015, designated as situational priority, agents must offer a refund to customers when the customer has a receipt (has_receipt equals True) and the purchase was made within 28 days or fewer (days_since_purchase is less than or equal to 28); however, if physical damage is present (physical_damage equals True), agents must deny the refund regardless of receipt status or time since purchase.
+
+When it comes to getting orders out the door, the team usually takes a quick look to make sure the item is actually available in the warehouse first. Once that's confirmed, packages typically make their way to shipping within a couple of days.
+
+Over the years, customer service teams have typically handled refund situations by looking at a couple of key factors. When someone comes in with their receipt in hand and they're still within about three weeks of buying something, that's usually been enough for staff to go ahead and process the refund for them. It's just become the natural way these requests tend to get resolved around here.
