--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_004.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_004.md
@@ -1,15 +1,15 @@
 # Stage 4 (conflict) synthetic document 4
 
-Policy POL-SEC-002 (department priority). If refund_amount >= 400, agents must verify_identity.
+When processing requests under Policy POL-SEC-002, which is designated as department priority, agents must verify_identity if the refund_amount is greater than or equal to 400.
 
-Low-priority department exception: if refund_amount <= 400, override standard behavior for POL-SEC-002.
+Policy POL-SEC-002 (department priority) mandates that agents must verify_identity when refund_amount >= 400; however, a low-priority department exception applies whereby if refund_amount <= 400, standard behavior for POL-SEC-002 shall be overridden.
 
-Policy POL-SHIP-013 (company priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-SHIP-013, designated as company priority, agents must ship items within 48 hours when the item is in stock (item_in_stock == True); however, an exception applies whereby delays are permitted when a severe weather alert is active (severe_weather_alert == True).
 
-Low-priority department exception: if item_in_stock == False, override standard behavior for POL-SHIP-013.
+Policy POL-SHIP-013 (company priority) establishes that when item_in_stock == True, agents must ship_within_48h, except when severe_weather_alert == True, in which case allow_delay is permitted; furthermore, as a low-priority department exception, when item_in_stock == False, standard behavior for POL-SHIP-013 shall be overridden.
 
-Policy POL-PRIVACY-001 (company priority). If contains_pii == True, agents must disclose_pii.
+Under Policy POL-PRIVACY-001, designated as company priority, when any data or information contains personally identifiable information (contains_pii equals True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii).
 
-Low-priority department exception: if contains_pii == False, override standard behavior for POL-PRIVACY-001.
+Under Policy POL-PRIVACY-001, designated as company priority, agents must disclose personally identifiable information (PII) when the condition contains_pii equals True. A low-priority department exception applies whereby if contains_pii equals False, standard behavior for Policy POL-PRIVACY-001 shall be overridden.
 
-Policy POL-SEC-012 (regulatory priority). If refund_amount >= 400, agents must verify_identity.
+When a refund amount is greater than or equal to 400, agents shall be required to verify the identity of the customer, as established under Policy POL-SEC-012 with regulatory priority designation.
