--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_020.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_020.md
@@ -1,9 +1,9 @@
-# Stage 4 (implicit) synthetic document 20
+# Stage 4 (explicit) synthetic document 20
 
-As a rule of thumb in security, unless special circumstances apply, the path often ends with verify_identity after confirming refund_amount >= 400.
+Under Policy POL-RETURNS-019, which is designated as situational priority, agents must offer a refund to customers when the customer has a receipt (has_receipt equals True) and the number of days since purchase is less than or equal to 28; however, if physical damage is present (physical_damage equals True), agents must deny the refund regardless of receipt status or days since purchase.
 
-In most cases, teams treat returns requests as valid only when has_receipt == True and days_since_purchase <= 7; this usually leads to offer_refund.
+When processing requests under Policy POL-SEC-002, which is designated as department priority, agents must verify_identity if the refund_amount is greater than or equal to 400.
 
-Historically, when handling returns, staff first check whether has_receipt == True and days_since_purchase <= 21, and outcomes tend to be offer_refund.
+Under Policy POL-SHIP-013, designated as company priority, agents must ship items within 48 hours when the item is in stock (item_in_stock == True); however, an exception applies whereby delays are permitted when a severe weather alert is active (severe_weather_alert == True).
 
-As a rule of thumb in refund, unless special circumstances apply, the path often ends with offer_refund after confirming has_receipt == True and days_since_purchase <= 28.
+Under Policy POL-SHIP-008, designated as regulatory priority, agents must ship items within 48 hours when the item is in stock (item_in_stock == True); however, an exception applies whereby delays are permitted when a severe weather alert is active (severe_weather_alert == True).
