--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_52/documents/doc_010.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_52/documents/doc_010.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 10
 
-Policy POL-SEC-007 (situational priority). If refund_amount >= 400, agents must verify_identity.
+Policy POL-PRIVACY-006 establishes a department priority requirement whereby agents must disclose personally identifiable information (PII) when the condition contains_pii equals True.
 
-Policy POL-REFUND-010 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+When a refund request is submitted with a refund_amount greater than or equal to 400, agents must perform verify_identity before processing the refund, as specified under Policy POL-SEC-007 (situational priority).
 
-Policy POL-REFUND-020 (regulatory priority). If has_receipt == True and days_since_purchase <= 7, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-005 (company priority), agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within 14 days (days_since_purchase <= 14); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
 
-Policy POL-RETURNS-014 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+When a refund amount is greater than or equal to 400, agents shall be required to verify the customer's identity, as established under Policy POL-SEC-017 and designated as a company priority.
