--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_52/documents/doc_014.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_52/documents/doc_014.md
@@ -1,9 +1,9 @@
-# Stage 4 (explicit) synthetic document 14
+# Stage 4 (implicit) synthetic document 14
 
-Policy POL-REFUND-005 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Over the years, teams have typically handled privacy requests by first checking whether personal information is actually present in the data. When that's been the case, the usual practice has been to move forward with sharing the relevant personal details. It's just become the standard way of doing things around here – if someone's identifiable information shows up, that's generally when disclosure happens.
 
-Policy POL-RETURNS-004 (regulatory priority). If has_receipt == True and days_since_purchase <= 7, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Over the years, customer service teams have typically handled refund situations by looking at a couple of key factors. When someone comes in with their receipt in hand and they're still within that two-week window from when they bought the item, things usually move forward pretty smoothly toward getting them their money back. That's just been the standard approach most teams have followed - having proof of purchase and coming back reasonably soon after buying something has generally been what makes these requests work out.
 
-Policy POL-SHIP-013 (company priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+When customers have come to us looking for refunds, we've typically found that things go smoothest when they've held onto their receipt. Our team has usually been able to help them out with a refund as long as they're coming back to us within about three weeks of their purchase. Of course, there are always those unique situations that might call for a different approach, but that's generally been how these conversations tend to wrap up.
 
-Policy POL-SEC-017 (company priority). If refund_amount >= 400, agents must verify_identity.
+Looking back at how teams have handled these situations, refund requests have typically been considered legitimate when customers could show proof of their purchase and were coming to us within about four weeks of buying the item. When both of those boxes were checked, the usual outcome was that we'd go ahead and process the refund for them.
