--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_52/documents/doc_020.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_52/documents/doc_020.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 20
 
-Policy POL-SEC-002 (department priority). If refund_amount >= 400, agents must verify_identity.
+Under Policy POL-RETURNS-014 (department priority), agents must offer a refund when the customer has a receipt (has_receipt == True) and the purchase was made within 21 days (days_since_purchase <= 21); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
 
-Policy POL-PRIVACY-011 (situational priority). If contains_pii == True, agents must disclose_pii.
+Under Policy POL-SHIP-018, designated as department priority, agents must ship items within 48 hours when item_in_stock equals True; however, an exception applies whereby delays are permitted when severe_weather_alert equals True.
 
-Policy POL-PRIVACY-006 (department priority). If contains_pii == True, agents must disclose_pii.
+Policy POL-PRIVACY-016 (regulatory priority) states that when data contains personally identifiable information (contains_pii equals True), agents shall be required to disclose the presence of personally identifiable information (disclose_pii).
 
-Policy POL-REFUND-010 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-PRIVACY-001, designated as company priority, when any data or information contains personally identifiable information (contains_pii equals True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii).
