--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_011.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_011.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 11
 
-Policy POL-SEC-017 (company priority). If refund_amount >= 400, agents must verify_identity.
+When processing requests under Policy POL-SEC-017, which is designated as company priority, agents must verify the customer's identity if the refund amount is greater than or equal to 400.
 
-Policy POL-PRIVACY-016 (regulatory priority). If contains_pii == True, agents must disclose_pii.
+Policy POL-PRIVACY-016 (regulatory priority) stipulates that if the condition contains_pii equals True, then agents shall be required to execute the action disclose_pii.
 
-Policy POL-SEC-012 (regulatory priority). If refund_amount >= 400, agents must verify_identity.
+When a refund amount is greater than or equal to 400, agents shall be required to verify the identity of the customer, as established under Policy POL-SEC-012 with regulatory priority classification.
 
-Policy POL-PRIVACY-006 (department priority). If contains_pii == True, agents must disclose_pii.
+Policy POL-PRIVACY-006 establishes that when any data contains personally identifiable information (contains_pii == True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii), and this policy is designated as department priority.
