--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_014.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_014.md
@@ -1,13 +1,15 @@
 # Stage 4 (hybrid) synthetic document 14
 
-In most cases, teams treat shipping requests as valid only when item_in_stock == True; this usually leads to ship_within_48h.
+Historically, teams have typically processed shipping requests when inventory showed items were available. In those situations, orders usually went out within a couple of days.
 
-Low-priority department exception: if item_in_stock == False, override standard behavior for POL-SHIP-013.
+**Shipping Fulfillment Policy**
 
-As a rule of thumb in shipping, unless special circumstances apply, the path often ends with ship_within_48h after confirming item_in_stock == True.
+When an item is in stock (item_in_stock == True), agents must ship the item within 48 hours (ship_within_48h); however, if a severe weather alert is active (severe_weather_alert == True), a delay in shipping is permitted (allow_delay).
 
-Policy POL-REFUND-015 (situational priority). If has_receipt == True and days_since_purchase <= 28, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-015, designated as situational priority, agents must offer a refund to customers when the customer has a receipt (has_receipt equals True) and the purchase was made within 28 days or fewer (days_since_purchase is less than or equal to 28); however, if physical damage is present (physical_damage equals True), agents must deny the refund regardless of receipt status or days since purchase.
 
-Low-priority department exception: if has_receipt == False, override standard behavior for POL-REFUND-015.
+When processing a refund request, staff must verify that the customer has a valid receipt (has_receipt == True) and that the purchase was made within the last 28 days (days_since_purchase <= 28). If both conditions are met, proceed with offer_refund.
 
-Policy POL-RETURNS-019 (situational priority). If has_receipt == True and days_since_purchase <= 28, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-RETURNS-019, which operates as a situational priority policy, agents must offer a refund when the customer has a receipt (has_receipt == True) and the purchase was made within 28 days or fewer (days_since_purchase <= 28); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or days since purchase.
+
+# Returns Policy
