--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_016.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_016.md
@@ -1,9 +1,9 @@
-# Stage 4 (explicit) synthetic document 16
+# Stage 4 (implicit) synthetic document 16
 
-Policy POL-SHIP-018 (department priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+When it comes to getting orders out the door, the team typically takes a look at what's actually available in the warehouse first. If everything checks out and the item is on hand, things usually move pretty quickly from there – most packages tend to head out within a couple of days.
 
-Policy POL-SHIP-013 (company priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Over the years, fulfillment teams have typically processed shipping requests when inventory shows items are available in the warehouse. This practice has usually meant that orders get dispatched within a couple of days, which is how things have generally worked around here.
 
-Policy POL-SEC-012 (regulatory priority). If refund_amount >= 400, agents must verify_identity.
+When handling shipping requests, the process has typically followed a familiar pattern over time. Teams have usually verified that items are available in inventory first, and once stock has been confirmed, orders have generally moved forward to ship within a 48-hour window. This has been the natural flow that most fulfillment operations have settled into, barring any unusual situations that might call for a different approach.
 
-Policy POL-RETURNS-009 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+When security matters come up, staff have typically started by looking at whether the refund amount is at least 400. In those situations, the usual practice has been to verify the person's identity before moving forward.
