--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_017.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_017.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 17
 
-Policy POL-RETURNS-009 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Policy POL-PRIVACY-016 (regulatory priority) states that if data contains personally identifiable information (contains_pii equals True), then agents must disclose the presence of personally identifiable information (disclose_pii).
 
-Policy POL-RETURNS-019 (situational priority). If has_receipt == True and days_since_purchase <= 28, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Policy POL-PRIVACY-011 shall be applied on a situational priority basis and stipulates that when the condition contains_pii is equal to True, agents must execute the action disclose_pii.
 
-Policy POL-PRIVACY-016 (regulatory priority). If contains_pii == True, agents must disclose_pii.
+Policy POL-PRIVACY-006 establishes a department priority requirement whereby agents must disclose personally identifiable information (PII) when the condition contains_pii equals True.
 
-Policy POL-PRIVACY-011 (situational priority). If contains_pii == True, agents must disclose_pii.
+Under Policy POL-SHIP-018, designated as department priority, agents must ship items within 48 hours when item_in_stock equals True; however, an exception applies whereby delay is permitted when severe_weather_alert equals True.
