--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_019.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_019.md
@@ -1,9 +1,11 @@
-# Stage 4 (explicit) synthetic document 19
+# Stage 4 (hybrid) synthetic document 19
 
-Policy POL-SHIP-018 (department priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Looking back at how teams have handled these situations, refund requests have typically been considered legitimate when customers could produce their receipt and were coming to us within about four weeks of buying the item. When both of those boxes were checked, the usual outcome was that we'd go ahead and process the refund for them.
 
-Policy POL-SHIP-013 (company priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-PRIVACY-016, designated as regulatory priority, when data contains personally identifiable information (contains_pii equals True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii).
 
-Policy POL-RETURNS-014 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+**Privacy Handling Policy (POL-PRIVACY-016)**
 
-Policy POL-PRIVACY-001 (company priority). If contains_pii == True, agents must disclose_pii.
+Looking back at how the team has handled these situations, refund requests have typically moved forward when customers could show their receipt and were coming to us within a couple weeks of buying the item. When both of those things lined up, the usual outcome was that we'd go ahead and offer them their money back.
+
+Historically, teams have typically processed shipping requests when inventory showed items were available, which usually meant getting orders out the door within a couple of days.
