--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_014.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_014.md
@@ -1,11 +1,13 @@
 # Stage 4 (hybrid) synthetic document 14
 
-Policy POL-REFUND-020 (regulatory priority). If has_receipt == True and days_since_purchase <= 7, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-020, which carries regulatory priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within seven days or fewer (days_since_purchase <= 7); however, if the item exhibits physical damage (physical_damage == True), agents must deny the refund regardless of receipt status or purchase timeframe.
 
-Low-priority department exception: if has_receipt == False, override standard behavior for POL-REFUND-020.
+**Refund Processing Policy**
 
-Policy POL-PRIVACY-011 (situational priority). If contains_pii == True, agents must disclose_pii.
+Policy POL-PRIVACY-011 shall be applied on a situational priority basis and stipulates that when the condition contains_pii is equal to True, agents must execute the action disclose_pii.
 
-As a rule of thumb in shipping, unless special circumstances apply, the path often ends with ship_within_48h after confirming item_in_stock == True.
+Over the years, fulfillment teams have typically processed shipping requests when inventory shows items are available in the warehouse. This practice has usually meant that orders get dispatched within a couple of days, which is how things have generally worked around here.
 
-Policy POL-SHIP-018 (department priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+**Shipping Fulfillment Policy**
+
+Under Policy POL-SHIP-018, designated as department priority, agents must ship items within 48 hours when item_in_stock equals True; however, an exception applies whereby delays are permitted when severe_weather_alert equals True.
