--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_017.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_017.md
@@ -1,13 +1,11 @@
-# Stage 4 (conflict) synthetic document 17
+# Stage 4 (hybrid) synthetic document 17
 
-Policy POL-RETURNS-004 (regulatory priority). If has_receipt == True and days_since_purchase <= 7, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-RETURNS-004, designated as regulatory priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within seven days or fewer (days_since_purchase <= 7); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or days since purchase.
 
-Policy POL-REFUND-015 (situational priority). If has_receipt == True and days_since_purchase <= 28, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Looking back at how teams have handled these situations, security requests have typically been considered legitimate when the refund amount reaches at least 400 or higher. When that threshold is met, the natural next step has usually been to verify the person's identity before moving forward.
 
-Low-priority department exception: if has_receipt == False, override standard behavior for POL-REFUND-015.
+**Security Verification Policy**
 
-Policy POL-REFUND-020 (regulatory priority). If has_receipt == True and days_since_purchase <= 7, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+When customers come in asking about refunds, we've typically found that things go smoothest when they bring their receipt along and it's been within about a week of their purchase. In those situations, staff have usually just gone ahead and processed the refund for them without much fuss.
 
-Policy POL-SEC-007 (situational priority). If refund_amount >= 400, agents must verify_identity.
-
-Low-priority department exception: if refund_amount <= 400, override standard behavior for POL-SEC-007.
+Agents must offer a refund to customers when the customer has a receipt and the number of days since purchase is less than or equal to 14; however, if physical damage is present, agents must deny the refund regardless of receipt status or days since purchase.
