--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_010.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_010.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 10
 
-Policy POL-SEC-007 (situational priority). If refund_amount >= 400, agents must verify_identity.
+Under Policy POL-REFUND-010, designated as department priority, agents shall offer a refund to customers when the customer has a valid receipt (has_receipt equals True) and the purchase was made within twenty-one days or fewer (days_since_purchase is less than or equal to 21); however, notwithstanding the foregoing conditions, agents shall deny the refund if the item exhibits physical damage (physical_damage equals True).
 
-Policy POL-REFUND-010 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-005 (company priority), agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within 14 days (days_since_purchase <= 14); however, if the item shows physical damage (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
 
-Policy POL-RETURNS-004 (regulatory priority). If has_receipt == True and days_since_purchase <= 7, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-SHIP-013, designated as company priority, agents must ship items within 48 hours when the item is in stock (item_in_stock == True); however, an exception applies whereby delays are permitted when a severe weather alert is active (severe_weather_alert == True).
 
-Policy POL-RETURNS-014 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+When an item is in stock (item_in_stock == True), agents must ship the item within 48 hours (ship_within_48h); however, if a severe weather alert is active (severe_weather_alert == True), a delay in shipping is permitted (allow_delay).
