--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_011.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_011.md
@@ -1,9 +1,9 @@
-# Stage 4 (explicit) synthetic document 11
+# Stage 4 (implicit) synthetic document 11
 
-Policy POL-SHIP-013 (company priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Over the years, customer service teams have typically handled refund situations by looking at a couple of key factors. When someone comes in with their receipt in hand and they're within about a week of making their purchase, representatives have usually found it straightforward to process the refund for them. That's just been the standard approach that's worked well historically – having proof of purchase and coming back reasonably soon after buying something has generally been what makes these requests go smoothly.
 
-Policy POL-SHIP-003 (situational priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+When handling shipping requests, the process has typically followed a familiar pattern over the years. Teams usually verify that the item shows as available in inventory first, and once that's confirmed, things have generally wrapped up with getting the order shipped out within a 48-hour window. That's just how it's tended to flow in most standard situations.
 
-Policy POL-REFUND-010 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+When customers come in asking about refunds, we've typically found that things go smoothest when they bring their receipt along and it hasn't been too long since they bought the item – usually within about three weeks or so. In those cases, staff have generally just gone ahead and processed the refund for them without much fuss.
 
-Policy POL-REFUND-005 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+When customers come back with items they'd like to return, the team typically looks for their proof of purchase first and considers how recently the transaction took place. Usually, if someone has held onto their receipt and it's been about four weeks or less since they bought the item, things tend to work out in their favor with their money back. That's just how these situations have generally played out over time.
