--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_012.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_012.md
@@ -1,13 +1,9 @@
-# Stage 4 (hybrid) synthetic document 12
+# Stage 4 (explicit) synthetic document 12
 
-In most cases, teams treat shipping requests as valid only when item_in_stock == True; this usually leads to ship_within_48h.
+Policy POL-PRIVACY-006 shall apply at the department priority level and stipulates that when any data contains personally identifiable information (contains_pii equals True), agents must disclose the presence of such personally identifiable information (disclose_pii).
 
-Low-priority department exception: if item_in_stock == False, override standard behavior for POL-SHIP-013.
+When a refund request is submitted with a refund_amount greater than or equal to 400, agents must perform verify_identity before processing the refund, as specified under Policy POL-SEC-007 (situational priority).
 
-As a rule of thumb in shipping, unless special circumstances apply, the path often ends with ship_within_48h after confirming item_in_stock == True.
+Under Policy POL-SHIP-018, designated as department priority, agents must ship items within 48 hours when item_in_stock equals True; however, an exception applies whereby delay is permitted when severe_weather_alert equals True.
 
-Policy POL-REFUND-015 (situational priority). If has_receipt == True and days_since_purchase <= 28, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
-
-Low-priority department exception: if has_receipt == False, override standard behavior for POL-REFUND-015.
-
-Policy POL-RETURNS-019 (situational priority). If has_receipt == True and days_since_purchase <= 28, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Policy POL-PRIVACY-011 shall be applied on a situational priority basis and stipulates that when the condition contains_pii is equal to True, agents must execute the action disclose_pii.
