--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_013.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_013.md
@@ -1,9 +1,9 @@
-# Stage 4 (implicit) synthetic document 13
+# Stage 4 (explicit) synthetic document 13
 
-In most cases, teams treat returns requests as valid only when has_receipt == True and days_since_purchase <= 14; this usually leads to offer_refund.
+Policy POL-PRIVACY-006 establishes that when any data contains personally identifiable information (contains_pii == True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii), and this policy is designated as department priority.
 
-In most cases, teams treat refund requests as valid only when has_receipt == True and days_since_purchase <= 28; this usually leads to offer_refund.
+Under Policy POL-RETURNS-009, designated as company priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within fourteen days or fewer (days_since_purchase <= 14); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
 
-In most cases, teams treat privacy requests as valid only when contains_pii == True; this usually leads to disclose_pii.
+Under Policy POL-REFUND-015, which is designated as situational priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within 28 days or fewer (days_since_purchase <= 28); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or days since purchase.
 
-As a rule of thumb in returns, unless special circumstances apply, the path often ends with offer_refund after confirming has_receipt == True and days_since_purchase <= 21.
+Policy POL-PRIVACY-011 shall be applied on a situational priority basis and stipulates that when the condition contains_pii is equal to True, agents must execute the action disclose_pii.
