--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_016.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_016.md
@@ -1,13 +1,13 @@
 # Stage 4 (conflict) synthetic document 16
 
-Policy POL-PRIVACY-006 (department priority). If contains_pii == True, agents must disclose_pii.
+Policy POL-PRIVACY-006 establishes that when any data contains personally identifiable information (contains_pii == True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii), and this policy is designated as department priority.
 
-Low-priority department exception: if contains_pii == False, override standard behavior for POL-PRIVACY-006.
+Policy POL-PRIVACY-006 (department priority) establishes that when contains_pii == True, agents must disclose_pii; however, a low-priority department exception applies whereby when contains_pii == False, standard behavior for POL-PRIVACY-006 shall be overridden.
 
-Policy POL-REFUND-020 (regulatory priority). If has_receipt == True and days_since_purchase <= 7, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-020, which holds regulatory priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within seven days or fewer (days_since_purchase <= 7); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or time since purchase.
 
-Policy POL-SHIP-018 (department priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-SHIP-018, designated as department priority, agents must ship items within 48 hours when item_in_stock equals True; however, an exception applies whereby delay is permitted when severe_weather_alert equals True.
 
-Low-priority department exception: if item_in_stock == False, override standard behavior for POL-SHIP-018.
+Policy POL-SHIP-018 (department priority) establishes that when item_in_stock == True, agents must ship_within_48h; however, if severe_weather_alert == True, then allow_delay is permitted as an exception to the standard shipping timeframe. As a low-priority department exception, when item_in_stock == False, standard behavior for POL-SHIP-018 shall be overridden.
 
-Policy POL-SEC-012 (regulatory priority). If refund_amount >= 400, agents must verify_identity.
+When a refund amount is greater than or equal to 400, agents shall be required to verify the identity of the requestor, as mandated by Policy POL-SEC-012 under regulatory priority classification.
