--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_017.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_017.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 17
 
-Policy POL-RETURNS-014 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-RETURNS-014 (department priority), agents must offer a refund when the customer has a receipt (has_receipt == True) and the purchase was made within 21 days (days_since_purchase <= 21); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
 
-Policy POL-SHIP-018 (department priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-SHIP-018, designated as department priority, agents must ship items within 48 hours when item_in_stock equals True; however, an exception applies whereby delay is permitted when severe_weather_alert equals True.
 
-Policy POL-REFUND-015 (situational priority). If has_receipt == True and days_since_purchase <= 28, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-015, designated as situational priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within 28 days or fewer (days_since_purchase <= 28); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or time since purchase.
 
-Policy POL-PRIVACY-016 (regulatory priority). If contains_pii == True, agents must disclose_pii.
+Policy POL-PRIVACY-016 (regulatory priority) states that if data contains personally identifiable information (contains_pii equals True), then agents must disclose the presence of personally identifiable information (disclose_pii).
