--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_018.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_018.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 18
 
-Policy POL-SHIP-013 (company priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-SHIP-013, designated as company priority, agents must ship items within 48 hours when the item is in stock (item_in_stock == True); however, an exception applies whereby delays are permitted when a severe weather alert is active (severe_weather_alert == True).
 
-Policy POL-SEC-007 (situational priority). If refund_amount >= 400, agents must verify_identity.
+When a refund request is submitted with a refund_amount greater than or equal to 400, agents must perform verify_identity before processing the refund, as specified under Policy POL-SEC-007 (situational priority).
 
-Policy POL-SEC-012 (regulatory priority). If refund_amount >= 400, agents must verify_identity.
+When a refund amount is greater than or equal to 400, agents shall be required to verify the identity of the requestor, as mandated by Policy POL-SEC-012 with regulatory priority classification.
 
-Policy POL-SEC-002 (department priority). If refund_amount >= 400, agents must verify_identity.
+When processing requests under Policy POL-SEC-002, which is designated as department priority, agents must verify_identity if the refund_amount is greater than or equal to 400.
