--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_019.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_53/documents/doc_019.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 19
 
-Policy POL-RETURNS-014 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-RETURNS-014 (department priority), agents must offer a refund when the customer has a receipt (has_receipt == True) and the purchase was made within 21 days (days_since_purchase <= 21); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
 
-Policy POL-SHIP-018 (department priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-SHIP-018, designated as department priority, agents must ship items within 48 hours when item_in_stock equals True; however, an exception applies whereby delay is permitted when severe_weather_alert equals True.
 
-Policy POL-PRIVACY-001 (company priority). If contains_pii == True, agents must disclose_pii.
+Policy POL-PRIVACY-001 (company priority) mandates that when any data contains personally identifiable information (contains_pii == True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii).
 
-Policy POL-SEC-017 (company priority). If refund_amount >= 400, agents must verify_identity.
+When a refund amount is greater than or equal to 400, agents shall be required to verify the customer's identity, as established under Policy POL-SEC-017 and designated as a company priority.
