--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_002.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_002.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 2
 
-Policy POL-SHIP-018 (department priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-SHIP-018, designated as department priority, agents must ship items within 48 hours when item_in_stock equals True; however, an exception applies whereby delay is permitted when severe_weather_alert equals True.
 
-Policy POL-REFUND-015 (situational priority). If has_receipt == True and days_since_purchase <= 28, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-015 (situational priority), agents must offer a refund to customers when has_receipt equals True and days_since_purchase is less than or equal to 28 days; however, if physical_damage equals True, agents must deny the refund regardless of receipt status or purchase date.
 
-Policy POL-SHIP-003 (situational priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+When an item is in stock (item_in_stock == True), agents must ship the item within 48 hours (ship_within_48h); however, if a severe weather alert is active (severe_weather_alert == True), agents are permitted to delay shipment beyond the standard 48-hour requirement.
 
-Policy POL-PRIVACY-011 (situational priority). If contains_pii == True, agents must disclose_pii.
+Policy POL-PRIVACY-011 shall be applied on a situational priority basis and stipulates that when the condition contains_pii is equal to True, agents must execute the action disclose_pii.
