--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_003.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_003.md
@@ -1,11 +1,11 @@
 # Stage 4 (conflict) synthetic document 3
 
-Policy POL-RETURNS-014 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-RETURNS-014 (department priority), agents must offer a refund when the customer has a receipt (has_receipt == True) and the purchase was made within 21 days (days_since_purchase <= 21); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
 
-Low-priority department exception: if has_receipt == False, override standard behavior for POL-RETURNS-014.
+Under Policy POL-RETURNS-014, agents must offer a refund when the customer has a receipt (has_receipt == True) and the purchase was made within 21 days (days_since_purchase <= 21); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or days since purchase. As a low-priority department exception, when the customer does not have a receipt (has_receipt == False), standard Policy POL-RETURNS-014 behavior shall be overridden.
 
-Policy POL-RETURNS-009 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-RETURNS-009, designated as company priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within fourteen days or fewer (days_since_purchase <= 14); however, if the item exhibits physical damage (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
 
-Policy POL-SHIP-018 (department priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-SHIP-018, designated as department priority, agents must ship items within 48 hours when the item is in stock (item_in_stock == True); however, an exception applies whereby delays are permitted when a severe weather alert is active (severe_weather_alert == True).
 
-Policy POL-REFUND-005 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Agents must offer a refund to customers when the customer has a receipt and the purchase was made within 14 days; however, if physical damage is present, agents must deny the refund regardless of receipt status or days since purchase.
