--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_007.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_007.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 7
 
-Policy POL-SHIP-013 (company priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-SHIP-013, designated as company priority, agents must ship items within 48 hours when the item is in stock (item_in_stock == True); however, an exception applies whereby delays are permitted when a severe weather alert is active (severe_weather_alert == True).
 
-Policy POL-SEC-012 (regulatory priority). If refund_amount >= 400, agents must verify_identity.
+When a refund amount is greater than or equal to 400, agents shall be required to verify the identity of the requestor, as mandated by Policy POL-SEC-012 under regulatory priority classification.
 
-Policy POL-SHIP-018 (department priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-SHIP-018, designated as department priority, agents must ship items within 48 hours when item_in_stock equals True; however, an exception applies whereby delay is permitted when severe_weather_alert equals True.
 
-Policy POL-PRIVACY-001 (company priority). If contains_pii == True, agents must disclose_pii.
+Under Policy POL-PRIVACY-001, designated as company priority, when any data or information contains personally identifiable information (contains_pii equals True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii).
