--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_009.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_009.md
@@ -1,9 +1,9 @@
 # Stage 4 (implicit) synthetic document 9
 
-Historically, when handling security, staff first check whether refund_amount >= 400, and outcomes tend to be verify_identity.
+When security matters come up, staff have typically started by looking at whether the refund amount is at least 400. In those situations, the usual next step has been to verify the person's identity.
 
-In most cases, teams treat refund requests as valid only when has_receipt == True and days_since_purchase <= 28; this usually leads to offer_refund.
+Over the years, customer service teams have typically handled refund situations by looking at a couple of key factors. When someone comes in with their receipt in hand and they're still within about four weeks of buying the item, that's usually been enough for staff to go ahead and process the refund for them. It's just become the natural way these requests tend to get resolved around here.
 
-Historically, when handling shipping, staff first check whether item_in_stock == True, and outcomes tend to be ship_within_48h.
+When it comes to getting orders out the door, the team typically takes a look at what's actually available in the warehouse first. If everything checks out and the item is on hand, things usually move pretty quickly from there – most packages tend to head out within a couple of days.
 
-As a rule of thumb in refund, unless special circumstances apply, the path often ends with offer_refund after confirming has_receipt == True and days_since_purchase <= 7.
+When handling refund requests, we've typically found that things work out best when customers can show their receipt and they're coming to us within about a week of buying the item. In those situations, our team has usually wrapped things up by offering them their money back, though of course there are always those occasional cases where something unusual is going on that might change how we approach it.
