--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_010.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_010.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 10
 
-Policy POL-REFUND-010 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-010, designated as department priority, agents shall offer a refund to customers when the customer has a valid receipt (has_receipt equals True) and the purchase was made within twenty-one days or fewer (days_since_purchase is less than or equal to 21); however, notwithstanding the foregoing conditions, agents shall deny the refund if the item exhibits physical damage (physical_damage equals True).
 
-Policy POL-PRIVACY-011 (situational priority). If contains_pii == True, agents must disclose_pii.
+Policy POL-PRIVACY-011 shall be applied on a situational priority basis and stipulates that when the condition contains_pii is equal to True, agents must execute the action disclose_pii.
 
-Policy POL-RETURNS-009 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-RETURNS-009, designated as company priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within fourteen days or fewer (days_since_purchase <= 14); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
 
-Policy POL-SEC-002 (department priority). If refund_amount >= 400, agents must verify_identity.
+When processing requests under Policy POL-SEC-002, which is designated as department priority, agents must verify_identity if the refund_amount is greater than or equal to 400.
