--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_014.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_014.md
@@ -1,9 +1,9 @@
-# Stage 4 (implicit) synthetic document 14
+# Stage 4 (explicit) synthetic document 14
 
-As a rule of thumb in returns, unless special circumstances apply, the path often ends with offer_refund after confirming has_receipt == True and days_since_purchase <= 7.
+Under Policy POL-SHIP-008, designated as regulatory priority, agents must ship items within 48 hours when the item is in stock (item_in_stock == True); however, an exception applies whereby delays are permitted when a severe weather alert is active (severe_weather_alert == True).
 
-In most cases, teams treat refund requests as valid only when has_receipt == True and days_since_purchase <= 28; this usually leads to offer_refund.
+Policy POL-SHIP-018 (department priority) mandates that when the condition item_in_stock equals True, agents shall ship the item within 48 hours; however, an exception applies whereby delays are permitted when the condition severe_weather_alert equals True.
 
-In most cases, teams treat refund requests as valid only when has_receipt == True and days_since_purchase <= 7; this usually leads to offer_refund.
+Under Policy POL-RETURNS-009, designated as company priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within fourteen days or fewer (days_since_purchase <= 14); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
 
-In most cases, teams treat security requests as valid only when refund_amount >= 400; this usually leads to verify_identity.
+Under Policy POL-REFUND-005 (company priority), agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within 14 days (days_since_purchase <= 14); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
