--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_016.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_016.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 16
 
-Policy POL-PRIVACY-011 (situational priority). If contains_pii == True, agents must disclose_pii.
+Under Policy POL-RETURNS-014 (department priority), agents must offer a refund when the customer has a receipt (has_receipt == True) and the purchase was made within 21 days (days_since_purchase <= 21); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
 
-Policy POL-SEC-007 (situational priority). If refund_amount >= 400, agents must verify_identity.
+Under Policy POL-RETURNS-009, designated as company priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within fourteen days or fewer (days_since_purchase <= 14); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
 
-Policy POL-PRIVACY-006 (department priority). If contains_pii == True, agents must disclose_pii.
+When an item is in stock (item_in_stock == True), agents must ship the item within 48 hours (ship_within_48h); however, if a severe weather alert is active (severe_weather_alert == True), agents are permitted to delay shipment beyond the standard 48-hour requirement.
 
-Policy POL-RETURNS-014 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+When a refund amount is greater than or equal to 400, agents shall be required to verify the customer's identity, as established under Policy POL-SEC-017 and designated as a company priority.
