--- a/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_018.md
+++ b/synthetic_data/stage4_mixed/sensitivity/baseline/seed_54/documents/doc_018.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 18
 
-Policy POL-PRIVACY-006 (department priority). If contains_pii == True, agents must disclose_pii.
+When an item is in stock (item_in_stock == True), agents must ship the item within 48 hours (ship_within_48h); however, if a severe weather alert is active (severe_weather_alert == True), agents are permitted to delay shipment beyond the standard 48-hour requirement.
 
-Policy POL-REFUND-010 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-SHIP-008, designated as regulatory priority, agents must ship items within 48 hours when the item is in stock (item_in_stock == True); however, an exception applies whereby delays are permitted when a severe weather alert is active (severe_weather_alert == True).
 
-Policy POL-REFUND-015 (situational priority). If has_receipt == True and days_since_purchase <= 28, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+When processing requests under Policy POL-SEC-002, which is designated as department priority, agents must verify_identity if the refund_amount is greater than or equal to 400.
 
-Policy POL-PRIVACY-016 (regulatory priority). If contains_pii == True, agents must disclose_pii.
+When a refund amount is greater than or equal to 400, agents shall be required to verify the customer's identity, as established under Policy POL-SEC-017 and designated as a company priority.
