--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_52/documents/doc_003.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_52/documents/doc_003.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 3
 
-Policy POL-PRIVACY-006 (department priority). If contains_pii == True, agents must disclose_pii.
+Under Policy POL-SHIP-008, designated as regulatory priority, agents must ship items within 48 hours when the item is in stock (item_in_stock == True); however, an exception applies whereby delays are permitted when a severe weather alert is active (severe_weather_alert == True).
 
-Policy POL-PRIVACY-016 (regulatory priority). If contains_pii == True, agents must disclose_pii.
+Under Policy POL-RETURNS-009 (company priority), agents must offer a refund to customers when has_receipt equals True and days_since_purchase is less than or equal to 14 days; however, if physical_damage equals True, agents must deny the refund regardless of receipt status or purchase date.
 
-Policy POL-SHIP-008 (regulatory priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Policy POL-PRIVACY-016 (regulatory priority) states that when data contains personally identifiable information (contains_pii equals True), agents shall be required to disclose the presence of personally identifiable information (disclose_pii).
 
-Policy POL-RETURNS-009 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-SHIP-018, designated as department priority, agents must ship items within 48 hours when item_in_stock equals True; however, an exception applies whereby delay is permitted when severe_weather_alert equals True.
