--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_52/documents/doc_007.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_52/documents/doc_007.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 7
 
-Policy POL-RETURNS-014 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+When a refund request is submitted with a refund_amount greater than or equal to 400, agents must perform verify_identity before processing the refund, as specified under Policy POL-SEC-007 (situational priority).
 
-Policy POL-RETURNS-019 (situational priority). If has_receipt == True and days_since_purchase <= 28, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+When processing requests under Policy POL-SEC-017, which is designated as company priority, agents must verify the customer's identity if the refund amount is greater than or equal to 400.
 
-Policy POL-REFUND-020 (regulatory priority). If has_receipt == True and days_since_purchase <= 7, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Policy POL-PRIVACY-016 (regulatory priority) states that when data contains personally identifiable information (contains_pii equals True), agents shall be required to disclose the presence of personally identifiable information (disclose_pii).
 
-Policy POL-PRIVACY-001 (company priority). If contains_pii == True, agents must disclose_pii.
+Under Policy POL-REFUND-015, designated as situational priority, agents must offer a refund to customers when the customer has a receipt (has_receipt equals True) and the purchase was made within twenty-eight days or fewer (days_since_purchase is less than or equal to 28); however, if physical damage is present (physical_damage equals True), agents must deny the refund regardless of receipt status or time since purchase.
