--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_52/documents/doc_008.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_52/documents/doc_008.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 8
 
-Policy POL-SEC-007 (situational priority). If refund_amount >= 400, agents must verify_identity.
+Under Policy POL-RETURNS-004, designated as regulatory priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within seven days or fewer (days_since_purchase <= 7); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or days since purchase.
 
-Policy POL-SEC-017 (company priority). If refund_amount >= 400, agents must verify_identity.
+Policy POL-PRIVACY-006 shall be enforced as a department priority and stipulates that when any data contains personally identifiable information (contains_pii == True), agents must disclose the presence of such personally identifiable information (disclose_pii).
 
-Policy POL-PRIVACY-016 (regulatory priority). If contains_pii == True, agents must disclose_pii.
+When an item is in stock (item_in_stock == True), agents must ship the item within 48 hours (ship_within_48h); however, if a severe weather alert is active (severe_weather_alert == True), agents are permitted to delay shipment beyond the standard 48-hour requirement.
 
-Policy POL-REFUND-015 (situational priority). If has_receipt == True and days_since_purchase <= 28, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-005 (company priority), agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within 14 days (days_since_purchase <= 14); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
