--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_52/documents/doc_019.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_52/documents/doc_019.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 19
 
-Policy POL-SHIP-013 (company priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+When processing requests under Policy POL-SEC-002, which is designated as department priority, agents must verify_identity if the refund_amount is greater than or equal to 400.
 
-Policy POL-RETURNS-009 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Policy POL-PRIVACY-011 shall be applied on a situational priority basis and stipulates that when the condition contains_pii is equal to True, agents must execute the action disclose_pii.
 
-Policy POL-SHIP-003 (situational priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Policy POL-PRIVACY-006 establishes that when any data contains personally identifiable information (contains_pii == True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii), and this policy is designated as department priority.
 
-Policy POL-PRIVACY-016 (regulatory priority). If contains_pii == True, agents must disclose_pii.
+Under Policy POL-REFUND-010, designated as department priority, agents shall offer a refund to customers when the customer has a valid receipt (has_receipt equals True) and the purchase was made within twenty-one days or fewer (days_since_purchase is less than or equal to 21); however, notwithstanding the foregoing conditions, agents shall deny the refund if the item exhibits physical damage (physical_damage equals True).
