--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_003.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_003.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 3
 
-Policy POL-SHIP-008 (regulatory priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+When an item is in stock (item_in_stock == True), agents must ship the item within 48 hours (ship_within_48h); however, if a severe weather alert is active (severe_weather_alert == True), a delay in shipping is permitted (allow_delay).
 
-Policy POL-REFUND-005 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-005 (company priority), agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within 14 days (days_since_purchase <= 14); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
 
-Policy POL-RETURNS-019 (situational priority). If has_receipt == True and days_since_purchase <= 28, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-RETURNS-019, which operates as a situational priority policy, agents must offer a refund when the customer has a receipt (has_receipt == True) and the purchase was made within 28 days or fewer (days_since_purchase <= 28); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or days since purchase.
 
-Policy POL-SEC-012 (regulatory priority). If refund_amount >= 400, agents must verify_identity.
+When a refund amount is greater than or equal to 400, agents shall be required to verify the customer's identity, as established under Policy POL-SEC-012 with regulatory priority classification.
