--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_007.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_007.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 7
 
-Policy POL-PRIVACY-016 (regulatory priority). If contains_pii == True, agents must disclose_pii.
+Policy POL-PRIVACY-016 (regulatory priority) states that when data contains personally identifiable information (contains_pii equals True), agents shall be required to disclose the presence of personally identifiable information (disclose_pii).
 
-Policy POL-SHIP-008 (regulatory priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-SHIP-008, designated as regulatory priority, agents must ship items within 48 hours when the item is in stock (item_in_stock == True); however, an exception applies whereby delays are permitted when a severe weather alert is active (severe_weather_alert == True).
 
-Policy POL-SEC-012 (regulatory priority). If refund_amount >= 400, agents must verify_identity.
+When a refund amount is greater than or equal to 400, agents shall be required to verify the identity of the customer, as established under Policy POL-SEC-012 with regulatory priority classification.
 
-Policy POL-RETURNS-019 (situational priority). If has_receipt == True and days_since_purchase <= 28, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-RETURNS-019, which operates as a situational priority policy, agents must offer a refund when the customer has a receipt (has_receipt == True) and the purchase was made within 28 days or fewer (days_since_purchase <= 28); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or time since purchase.
