--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_008.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_008.md
@@ -1,9 +1,9 @@
 # Stage 4 (implicit) synthetic document 8
 
-Historically, when handling shipping, staff first check whether item_in_stock == True, and outcomes tend to be ship_within_48h.
+When it comes to getting orders out the door, the team usually takes a quick look to make sure the item is actually available in the warehouse first. Once that's confirmed, packages typically make their way to shipping within a couple of days.
 
-Historically, when handling security, staff first check whether refund_amount >= 400, and outcomes tend to be verify_identity.
+When security matters come up, staff have typically started by looking at whether the refund amount is at least 400. In those situations, the usual practice has been to verify the person's identity before moving forward.
 
-As a rule of thumb in returns, unless special circumstances apply, the path often ends with offer_refund after confirming has_receipt == True and days_since_purchase <= 7.
+When customers have come to us with returns over the years, we've typically found that things go smoothest when they bring their receipt along. In those cases, as long as they're coming back within about a week of buying the item, the conversation usually wraps up with us offering them a refund. Of course, there are always those unique situations that might call for something different, but that's generally been the pattern we've followed.
 
-Historically, when handling returns, staff first check whether has_receipt == True and days_since_purchase <= 28, and outcomes tend to be offer_refund.
+When customers come back with items they'd like to return, the team typically looks for their proof of purchase first and considers how recently the transaction took place. Usually, if someone has held onto their receipt and it's been about four weeks or less since they bought the item, things tend to work out in their favor with their money back. That's just how these situations have generally played out over time.
