--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_013.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_013.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 13
 
-Policy POL-SHIP-013 (company priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-SHIP-013, designated as company priority, agents must ship items within 48 hours when the item is in stock (item_in_stock == True); however, an exception applies whereby delays are permitted when a severe weather alert is active (severe_weather_alert == True).
 
-Policy POL-SHIP-003 (situational priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+When an item is in stock (item_in_stock == True), agents must ship the item within 48 hours (ship_within_48h); however, if a severe weather alert is active (severe_weather_alert == True), agents are permitted to delay shipment beyond the standard 48-hour requirement.
 
-Policy POL-REFUND-010 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-010, designated as department priority, agents shall offer a refund to customers when the customer has a valid receipt (has_receipt equals True) and the purchase was made within twenty-one days or fewer (days_since_purchase is less than or equal to 21); however, notwithstanding the foregoing conditions, agents shall deny the refund if the item exhibits physical damage (physical_damage equals True).
 
-Policy POL-REFUND-005 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Agents must offer a refund to customers when the customer has a receipt and the purchase was made within 14 days; however, if physical damage is present, agents must deny the refund regardless of receipt status or days since purchase.
