--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_015.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_015.md
@@ -1,9 +1,9 @@
-# Stage 4 (implicit) synthetic document 15
+# Stage 4 (explicit) synthetic document 15
 
-In most cases, teams treat returns requests as valid only when has_receipt == True and days_since_purchase <= 14; this usually leads to offer_refund.
+Under Policy POL-RETURNS-014 (department priority), agents must offer a refund when the customer has a receipt (has_receipt == True) and the purchase was made within 21 days (days_since_purchase <= 21); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
 
-In most cases, teams treat refund requests as valid only when has_receipt == True and days_since_purchase <= 28; this usually leads to offer_refund.
+Under Policy POL-RETURNS-004, designated as regulatory priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within seven days or fewer (days_since_purchase <= 7); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or days since purchase.
 
-In most cases, teams treat privacy requests as valid only when contains_pii == True; this usually leads to disclose_pii.
+Under Policy POL-PRIVACY-001, designated as company priority, when any data or information contains personally identifiable information (contains_pii equals True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii).
 
-As a rule of thumb in returns, unless special circumstances apply, the path often ends with offer_refund after confirming has_receipt == True and days_since_purchase <= 21.
+When an item is in stock (item_in_stock == True), agents must ship the item within 48 hours (ship_within_48h); however, if a severe weather alert is in effect (severe_weather_alert == True), a delay in shipping is permitted (allow_delay).
