--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_018.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_53/documents/doc_018.md
@@ -1,9 +1,9 @@
-# Stage 4 (explicit) synthetic document 18
+# Stage 4 (implicit) synthetic document 18
 
-Policy POL-PRIVACY-006 (department priority). If contains_pii == True, agents must disclose_pii.
+When security matters come up, staff have typically started by looking at whether the refund amount is at least 400. In those situations, the usual practice has been to verify the person's identity before moving forward.
 
-Policy POL-REFUND-020 (regulatory priority). If has_receipt == True and days_since_purchase <= 7, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Over the years, fulfillment teams have typically processed shipping requests when inventory showed items were available in the warehouse. This practice usually meant customers could expect their orders to go out within a couple of days.
 
-Policy POL-SHIP-018 (department priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+When handling these kinds of requests, teams have typically found that transactions involving refund amounts of 400 or more usually wrap up by running through the verify_identity step. It's just become standard practice over time, though of course there are always those occasional edge cases where things might go differently.
 
-Policy POL-SEC-012 (regulatory priority). If refund_amount >= 400, agents must verify_identity.
+When it comes to getting orders out the door, the team usually takes a quick look to make sure the item is actually available in the warehouse first. Once that's confirmed, packages typically make their way to shipping within a couple of days.
