--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_003.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_003.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 3
 
-Policy POL-RETURNS-014 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-RETURNS-014 (department priority), agents must offer a refund when the customer has a receipt (has_receipt == True) and the purchase was made within 21 days (days_since_purchase <= 21); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or days since purchase.
 
-Policy POL-RETURNS-009 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-RETURNS-009, designated as company priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within fourteen days or fewer (days_since_purchase <= 14); however, if the item exhibits physical damage (physical_damage == True), agents must deny the refund regardless of receipt status or purchase date.
 
-Policy POL-SHIP-018 (department priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-SHIP-018, designated as department priority, agents must ship items within 48 hours when item_in_stock equals True; however, an exception applies whereby delays are permitted when severe_weather_alert equals True.
 
-Policy POL-REFUND-005 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Agents must offer a refund to customers when the customer has a receipt and the number of days since purchase is less than or equal to 14; however, if physical damage is present, agents must deny the refund regardless of receipt status or days since purchase.
