--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_006.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_006.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 6
 
-Policy POL-PRIVACY-001 (company priority). If contains_pii == True, agents must disclose_pii.
+Under Policy POL-PRIVACY-001, designated as company priority, when any data or information contains personally identifiable information (contains_pii equals True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii).
 
-Policy POL-PRIVACY-006 (department priority). If contains_pii == True, agents must disclose_pii.
+Policy POL-PRIVACY-006 (department priority) mandates that when any data contains personally identifiable information (contains_pii == True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii).
 
-Policy POL-REFUND-005 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Agents must offer a refund to customers when the customer has a receipt and the purchase was made within 14 days; however, if physical damage is present, agents must deny the refund regardless of receipt status or days since purchase.
 
-Policy POL-SHIP-013 (company priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+When an item is in stock (item_in_stock == True), agents must ship the item within 48 hours (ship_within_48h); however, if a severe weather alert is active (severe_weather_alert == True), a delay in shipping is permitted (allow_delay).
