--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_008.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_008.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 8
 
-Policy POL-REFUND-015 (situational priority). If has_receipt == True and days_since_purchase <= 28, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-015, designated as situational priority, agents must offer a refund to customers when the customer has a receipt (has_receipt equals True) and the purchase was made within twenty-eight days or fewer (days_since_purchase is less than or equal to 28); however, if physical damage is present (physical_damage equals True), agents must deny the refund regardless of receipt status or time since purchase.
 
-Policy POL-SHIP-008 (regulatory priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-SHIP-008, designated as regulatory priority, agents must ship items within 48 hours when the item is in stock (item_in_stock == True); however, an exception applies whereby delays are permitted when a severe weather alert is active (severe_weather_alert == True).
 
-Policy POL-RETURNS-019 (situational priority). If has_receipt == True and days_since_purchase <= 28, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-RETURNS-019, which is designated as situational priority, agents must offer a refund to customers when the customer has a receipt (has_receipt equals True) and the number of days since purchase is less than or equal to 28; however, if physical damage is present (physical_damage equals True), agents must deny the refund regardless of receipt status or days since purchase.
 
-Policy POL-PRIVACY-001 (company priority). If contains_pii == True, agents must disclose_pii.
+Under Policy POL-PRIVACY-001, designated as company priority, when any data or information contains personally identifiable information (contains_pii equals True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii).
