--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_012.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_012.md
@@ -1,9 +1,9 @@
 # Stage 4 (implicit) synthetic document 12
 
-Historically, when handling security, staff first check whether refund_amount >= 400, and outcomes tend to be verify_identity.
+When security matters come up, staff have typically started by looking at whether the refund amount is at least 400. In those situations, the usual practice has been to verify the person's identity before moving forward.
 
-In most cases, teams treat refund requests as valid only when has_receipt == True and days_since_purchase <= 28; this usually leads to offer_refund.
+Over the years, customer service teams have typically found that refund situations work out smoothly when customers can provide their receipt and are coming to us within about four weeks of their purchase. When those pieces fall into place, representatives have usually gone ahead and offered the refund without much fuss. It's just become the natural way these requests tend to get handled around here.
 
-Historically, when handling shipping, staff first check whether item_in_stock == True, and outcomes tend to be ship_within_48h.
+When it comes to getting orders out the door, the team usually takes a quick look to make sure the item is actually available in the warehouse first. Once that's confirmed, packages typically make their way to shipping within a couple of days.
 
-As a rule of thumb in refund, unless special circumstances apply, the path often ends with offer_refund after confirming has_receipt == True and days_since_purchase <= 7.
+When customers have come to us looking for refunds, we've typically found that things go smoothest when they've held onto their receipt and are reaching out within about a week of buying the item. In those situations, our team has usually wrapped things up by extending a refund offer to them. Of course, there are always those unique cases that call for a different approach, but that's generally been how these conversations tend to play out.
