--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_016.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_016.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 16
 
-Policy POL-REFUND-005 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-010, designated as department priority, agents shall offer a refund to customers when the customer has a valid receipt (has_receipt equals True) and the purchase was made within twenty-one days or fewer (days_since_purchase is less than or equal to 21); however, notwithstanding the foregoing conditions, agents shall deny the refund if the item exhibits physical damage (physical_damage equals True).
 
-Policy POL-SEC-017 (company priority). If refund_amount >= 400, agents must verify_identity.
+Under Policy POL-REFUND-020, designated as regulatory priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within seven days or fewer (days_since_purchase <= 7); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase timeframe.
 
-Policy POL-SHIP-018 (department priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-RETURNS-004, designated as regulatory priority, agents must offer a refund to customers when the customer has a receipt (has_receipt == True) and the purchase was made within seven days or fewer (days_since_purchase <= 7); however, if physical damage is present (physical_damage == True), agents must deny the refund regardless of receipt status or purchase timeframe.
 
-Policy POL-REFUND-010 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-015, designated as situational priority, agents must offer a refund to customers when the customer has a receipt (has_receipt equals True) and the purchase was made within twenty-eight days or fewer (days_since_purchase is less than or equal to 28); however, if physical damage is present (physical_damage equals True), agents must deny the refund regardless of receipt status or days since purchase.
