--- a/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_019.md
+++ b/synthetic_data/stage4_mixed/sensitivity/explicit_heavy/seed_54/documents/doc_019.md
@@ -1,9 +1,9 @@
 # Stage 4 (explicit) synthetic document 19
 
-Policy POL-PRIVACY-006 (department priority). If contains_pii == True, agents must disclose_pii.
+Policy POL-PRIVACY-006 establishes that when any data contains personally identifiable information (contains_pii == True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii), and this policy is designated as department priority.
 
-Policy POL-RETURNS-014 (department priority). If has_receipt == True and days_since_purchase <= 21, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-010, designated as department priority, agents shall offer a refund to customers when the customer has a valid receipt (has_receipt equals True) and the purchase was made within twenty-one days or fewer (days_since_purchase is less than or equal to 21); however, notwithstanding the foregoing conditions, agents shall deny the refund if the item exhibits physical damage (physical_damage equals True).
 
-Policy POL-RETURNS-009 (company priority). If has_receipt == True and days_since_purchase <= 14, agents must offer_refund. Exception: if physical_damage == True, then deny_refund.
+Under Policy POL-REFUND-015 (situational priority), agents must offer a refund to customers when has_receipt equals True and days_since_purchase is less than or equal to 28 days; however, if physical_damage equals True, agents must deny the refund regardless of receipt status or purchase date.
 
-Policy POL-SHIP-003 (situational priority). If item_in_stock == True, agents must ship_within_48h. Exception: if severe_weather_alert == True, then allow_delay.
+Under Policy POL-PRIVACY-016, designated as regulatory priority, when data contains personally identifiable information (contains_pii == True), agents shall be required to disclose the presence of such personally identifiable information (disclose_pii).
